# helsi_test

./: docker-compose.local.yml  docker-compose.yml  readme.md
api/: .env.example  Dockerfile  check_code.sh  pyproject.toml  readme.md  run.sh
api/api/: asgi.py  pagination.py  settings.py  urls.py  wsgi.py
api/currencies/: apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
api/currencies/management/commands/: build_csv.py
api/currencies/migrations/: 0001_initial.py  0002_favoritecurrency.py
api/user/: apps.py  models.py  urls.py
api/user/management/commands/: test_user.py
api/user/migrations/: 0001_initial.py
worker/: .env.example  Dockerfile  check_code.sh  main.py  pyproject.toml  readme.md
worker/components/core/: config.py  database.py  logger.py  testing_database.py
worker/components/currencies/: constants.py  history_currencies_repository.py  models.py  repository.py
worker/components/currencies/tests/: test_history_currencies_repository.py  test_repository.py
worker/worker/: configure.py  tasks.py
