[tool.poetry]
name = "worker"
version = "0.1.0"
description = "worker"
authors = ["balas <balashenkoaleksandr294@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
celery = "^5.4.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
redis = "^5.0.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"
mypy = "^1.10.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88


[tool.ruff]
lint.select = ["E", "F", "ICN", "TID", "N", "D", "ANN", "S", "RUF"]
lint.ignore = ["D107", "D104", "D106", "D101", "ANN101", "D401", "D407", "D212", "D205", "ANN205", "D202", "D203", "D406",
    "ANN204", "ANN202", "ANN201"]
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ",
    "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE",
    "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []
line-length = 88
exclude = ["venv"]


[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = [
    "S101",
]


[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true
